# test-linkml-project-copier

./: .copier-answers.yml  404.html  CONTRIBUTING.md  README.md  config.public.mk  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
about/: index.html
docs/: about.md  index.md
docs/elements/: Boolean.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Float.md  Integer.md  Jsonpath.md  Jsonpointer.md  NamedThing.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  Person.md  PersonCollection.md  PersonStatus.md  Sparqlpath.md  String.md  Time.md  Uri.md  Uriorcurie.md  age_in_years.md  birth_date.md  description.md  entries.md  id.md  index.md  name.md  primary_email.md  test-linkml-project-copier.md  vital_status.md
elements/: index.html
elements/Boolean/: index.html
elements/Curie/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/Float/: index.html
elements/Integer/: index.html
elements/Jsonpath/: index.html
elements/Jsonpointer/: index.html
elements/NamedThing/: index.html
elements/Ncname/: index.html
elements/Nodeidentifier/: index.html
elements/Objectidentifier/: index.html
elements/Person/: index.html
elements/PersonCollection/: index.html
elements/PersonStatus/: index.html
elements/Sparqlpath/: index.html
elements/String/: index.html
elements/Time/: index.html
elements/Uri/: index.html
elements/Uriorcurie/: index.html
elements/age_in_years/: index.html
elements/birth_date/: index.html
elements/description/: index.html
elements/entries/: index.html
elements/id/: index.html
elements/name/: index.html
elements/primary_email/: index.html
elements/test-linkml-project-copier/: index.html
elements/vital_status/: index.html
examples/: README.md
pr-preview/pr-11/: sitemap.xml
pr-preview/pr-14/: sitemap.xml
pr-preview/pr-15/: sitemap.xml
pr-preview/pr-15/about/: index.html
pr-preview/pr-16/: sitemap.xml
pr-preview/pr-18/search/: search_index.json
pr-preview/pr-20/: sitemap.xml
pr-preview/pr-21/: index.html
pr-preview/pr-23/: sitemap.xml
pr-preview/pr-5/: 404.html  index.html  sitemap.xml
pr-preview/pr-5/about/: index.html
pr-preview/pr-5/search/: search_index.json
pr-preview/pr-9/: index.html
pr-preview/pr-9/search/: search_index.json
project/: README.md
project/excel/: test_linkml_project_copier.xlsx
project/jsonld/: test_linkml_project_copier.context.jsonld  test_linkml_project_copier.jsonld
project/jsonschema/: test_linkml_project_copier.schema.json
project/owl/: test_linkml_project_copier.owl.ttl
project/prefixmap/: test_linkml_project_copier.yaml
project/shacl/: test_linkml_project_copier.shacl.ttl
project/shex/: test_linkml_project_copier.shex
schema/: test_linkml_project_copier.yaml
search/: search_index.json
src/test_linkml_project_copier/: __init__.py
src/test_linkml_project_copier/datamodel/: __init__.py  (+2 more)
tests/: __init__.py  test_data.py
tests/data/: README.md
(+64 files in other folders)
